kubernetes-for-mac-m1/resources/apigateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
  namespace: edipogram
spec:
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: tibbo93/apigateway:kube-arm64
          ports:
            - name: http
              containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  namespace: edipogram
spec:
  type: NodePort
  selector:
    app: apigateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
