kubernetes-for-mac-m1/resources/connessioni-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connessioni
  namespace: edipogram
spec:
  replicas: 2
  selector:
    matchLabels:
      app: connessioni
  template:
    metadata:
      labels:
        app: connessioni
    spec:
      containers:
        - name: connessioni
          image: tibbo93/connessioni-service:kube-arm64
          ports:
            - name: http
              containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: connessioni
  namespace: edipogram
spec:
  selector:
    app: connessioni
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
