kubernetes-for-mac-m1/resources/apigateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enigmi-ing
  namespace: edipogram
spec:
  rules:
    - host: edipogram
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: apigateway
                port:
                  number: 8080
